// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image loading-icon prop 1`] = `
<DocumentFragment>
  .c0.mul-image {
  position: relative;
  display: inline-block;
}

.c0.mul-image--round {
  overflow: hidden;
  border-radius: 50%;
}

.c0.mul-image--round img {
  border-radius: inherit;
}

.c0.mul-image .mul-image__img,
.c0.mul-image .mul-image__error,
.c0.mul-image .mul-image__loading {
  display: block;
  width: 100%;
  height: 100%;
}

.c0.mul-image .mul-image__error,
.c0.mul-image .mul-image__loading {
  position: absolute;
  top: 0;
  left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #969799;
  font-size: 14px;
  background-color: #f7f8fa;
}

.c0.mul-image .mul-image__loading-icon {
  font-size: 22px;
}

.c0.mul-image .mul-image__error-icon {
  font-size: 22px;
}

.c1.mul-icon {
  position: relative;
  display: inline-block;
  font-family: 'muld-icon' !important;
  font-size: inherit;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
}

.c1.mul-icon::before {
  display: inline-block;
}

.c1.mul-icon .mul-icon__image {
  width: 1em;
  height: 1em;
  object-fit: contain;
}

.c1.mul-icon-success::before {
  content: '\\F0C8';
}

<div
    class="c0 mul-image"
  >
    <img
      class="mul-image__img"
      style="object-fit: fill;"
    />
    <div
      class="mul-image__loading"
    >
      <i
        class="c1 mul-image__loading-icon mul-image__loading-icon-success"
        content="F0C8"
        name="success"
        style="font-size: 20px;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Image radius prop 1`] = `
<DocumentFragment>
  .c0.mul-image {
  position: relative;
  display: inline-block;
}

.c0.mul-image--round {
  overflow: hidden;
  border-radius: 50%;
}

.c0.mul-image--round img {
  border-radius: inherit;
}

.c0.mul-image .mul-image__img,
.c0.mul-image .mul-image__error,
.c0.mul-image .mul-image__loading {
  display: block;
  width: 100%;
  height: 100%;
}

.c0.mul-image .mul-image__error,
.c0.mul-image .mul-image__loading {
  position: absolute;
  top: 0;
  left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #969799;
  font-size: 14px;
  background-color: #f7f8fa;
}

.c0.mul-image .mul-image__loading-icon {
  font-size: 22px;
}

.c0.mul-image .mul-image__error-icon {
  font-size: 22px;
}

.c1.mul-icon {
  position: relative;
  display: inline-block;
  font-family: 'muld-icon' !important;
  font-size: inherit;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
}

.c1.mul-icon::before {
  display: inline-block;
}

.c1.mul-icon .mul-icon__image {
  width: 1em;
  height: 1em;
  object-fit: contain;
}

.c1.mul-icon-photo::before {
  content: '\\F09D';
}

<div
    class="c0 mul-image"
    style="overflow: hidden; border-radius: 3px;"
  >
    <img
      class="mul-image__img"
      src="https://img.yzcdn.cn/vant/cat.jpeg"
      style="object-fit: fill;"
    />
    <div
      class="mul-image__loading"
    >
      <i
        class="c1 mul-image__loading-icon mul-image__loading-icon-photo"
        content="F09D"
        name="photo"
        style="font-size: 20px;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Image show-error prop 1`] = `
<DocumentFragment>
  .c0.mul-image {
  position: relative;
  display: inline-block;
}

.c0.mul-image--round {
  overflow: hidden;
  border-radius: 50%;
}

.c0.mul-image--round img {
  border-radius: inherit;
}

.c0.mul-image .mul-image__img,
.c0.mul-image .mul-image__error,
.c0.mul-image .mul-image__loading {
  display: block;
  width: 100%;
  height: 100%;
}

.c0.mul-image .mul-image__error,
.c0.mul-image .mul-image__loading {
  position: absolute;
  top: 0;
  left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #969799;
  font-size: 14px;
  background-color: #f7f8fa;
}

.c0.mul-image .mul-image__loading-icon {
  font-size: 22px;
}

.c0.mul-image .mul-image__error-icon {
  font-size: 22px;
}

<div
    class="c0 mul-image"
  />
</DocumentFragment>
`;

exports[`Image show-loading prop 1`] = `
<DocumentFragment>
  .c0.mul-image {
  position: relative;
  display: inline-block;
}

.c0.mul-image--round {
  overflow: hidden;
  border-radius: 50%;
}

.c0.mul-image--round img {
  border-radius: inherit;
}

.c0.mul-image .mul-image__img,
.c0.mul-image .mul-image__error,
.c0.mul-image .mul-image__loading {
  display: block;
  width: 100%;
  height: 100%;
}

.c0.mul-image .mul-image__error,
.c0.mul-image .mul-image__loading {
  position: absolute;
  top: 0;
  left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #969799;
  font-size: 14px;
  background-color: #f7f8fa;
}

.c0.mul-image .mul-image__loading-icon {
  font-size: 22px;
}

.c0.mul-image .mul-image__error-icon {
  font-size: 22px;
}

<div
    class="c0 mul-image"
  >
    <img
      class="mul-image__img"
      style="object-fit: fill;"
    />
  </div>
</DocumentFragment>
`;
